--- a/Cuadernos/sesion 3.ipynb
+++ b/Cuadernos/sesion 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "dccc75bf",
    "metadata": {},
    "outputs": [],
@@ -37,33 +37,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "4564db04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WindowsPath('../Datos/productos.csv')]\n"
+     ]
+    }
+   ],
    "source": [
-    "Path_1=Path('..')/'Datos'"
+    "Path_1=Path('..')/'Datos'\n",
+    "listed_files=(list(Path_1.glob('*.csv')))\n",
+    "print(listed_files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "5c420d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo1 = Path('../Datos/productos.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3eacea23",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<map at 0x2074e5b76d0>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "p.glob('*.csv')"
+    "print(archivo1.exists())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6d8d2f2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os.stat_result(st_mode=33206, st_ino=844424930138426, st_dev=1180199225781706506, st_nlink=1, st_uid=0, st_gid=0, st_size=90, st_atime=1766975946, st_mtime=1766968456, st_ctime=1766968456)\n",
+      "productos\n",
+      ".csv\n",
+      "..\\Datos\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(archivo1.stat())\n",
+    "print(archivo1.stem)\n",
+    "print(archivo1.suffix)\n",
+    "print(archivo1.parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "85bed04f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "archivo2=Path('../docker-compose.yml')\n",
+    "print(archivo2.exists())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fee663ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os.stat_result(st_mode=33206, st_ino=844424930138429, st_dev=1180199225781706506, st_nlink=1, st_uid=0, st_gid=0, st_size=1015, st_atime=1766975946, st_mtime=1766968456, st_ctime=1766968456)\n",
+      "docker-compose\n",
+      ".yml\n",
+      "..\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(archivo2.stat())\n",
+    "print(archivo2.stem)\n",
+    "print(archivo2.suffix)\n",
+    "print(archivo2.parent)"
    ]
   }
  ],
