--- a/Cuadernos/sesion 3.ipynb
+++ b/Cuadernos/sesion 3.ipynb
@@ -149,6 +149,112 @@
     "print(archivo2.suffix)\n",
     "print(archivo2.parent)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0656f78d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-28 21:51:05,733 - INFO - Proceso iniciado\n",
+      "2025-12-28 21:51:05,736 - INFO - El archivo ..\\Datos\\productos.csv existe.\n",
+      "2025-12-28 21:51:05,737 - INFO - Tamaño del archivo: 90 bytes\n",
+      "2025-12-28 21:51:05,739 - INFO - Nombre del archivo sin extensión: productos\n",
+      "2025-12-28 21:51:05,740 - INFO - Extensión del archivo: .csv\n",
+      "2025-12-28 21:51:05,741 - INFO - Directorio padre: ..\\Datos\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format='%(asctime)s - %(levelname)s - %(message)s'\n",
+    ")\n",
+    "\n",
+    "logging.info(\"Proceso iniciado\")\n",
+    "archivo1=Path('../Datos/productos.csv')\n",
+    "if archivo1.exists():\n",
+    "    logging.info(f\"El archivo {archivo1} existe.\")\n",
+    "    logging.info(f\"Tamaño del archivo: {archivo1.stat().st_size} bytes\")\n",
+    "    logging.info(f\"Nombre del archivo sin extensión: {archivo1.stem}\")\n",
+    "    logging.info(f\"Extensión del archivo: {archivo1.suffix}\")\n",
+    "    logging.info(f\"Directorio padre: {archivo1.parent}\")\n",
+    "else:\n",
+    "    logging.warning(f\"El archivo {archivo1} no existe.\")\n",
+    "    logging.error(\"No se pueden obtener detalles del archivo inexistente.\")\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "240bc955",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-28 22:00:18,619 - INFO - Lista de elegibles: [1, 2, 3, 0, 0, '0', 'o', 'o', 'o', 'o']\n",
+      "2025-12-28 22:00:18,622 - INFO - Elegibles 1: ['3' '0']\n",
+      "2025-12-28 22:00:18,624 - INFO - Primer elemento seleccionado: 3\n",
+      "2025-12-28 22:00:18,626 - INFO - Segundo elemento seleccionado: 0\n",
+      "2025-12-28 22:00:18,628 - ERROR - Error: División por cero no permitida.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format='%(asctime)s - %(levelname)s - %(message)s'\n",
+    ")\n",
+    "\n",
+    "lista_elegibles= [1,2,3,0,0,\"0\",\"o\",\"o\",\"o\",\"o\"]\n",
+    "\n",
+    "logging.info(f\"Lista de elegibles: {lista_elegibles}\")\n",
+    "\n",
+    "## Escogemos dos\n",
+    "\n",
+    "\n",
+    "elegibles_1 = np.random.choice(lista_elegibles, size=2, replace=False)\n",
+    "logging.info(f\"Elegibles 1: {elegibles_1}\")\n",
+    "\n",
+    "try:\n",
+    "    primer_elemento = int(elegibles_1[0])\n",
+    "    logging.info(f\"Primer elemento seleccionado: {primer_elemento}\")\n",
+    "    segundo_elemento = int(elegibles_1[1])\n",
+    "    logging.info(f\"Segundo elemento seleccionado: {segundo_elemento}\")\n",
+    "    \n",
+    "    div= primer_elemento / segundo_elemento\n",
+    "    logging.info(f\"Resultado de la división: {div}\")\n",
+    "except ZeroDivisionError:\n",
+    "    logging.error(\"Error: División por cero no permitida.\")\n",
+    "except Exception as e:\n",
+    "    logging.error(f\"Ocurrió un error inesperado: {e}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a8935b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
