--- a/Cuadernos/sesion 4.ipynb
+++ b/Cuadernos/sesion 4.ipynb
@@ -1277,17 +1277,85 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56d5daa-1a0c-4d0e-8c4b-7ee440990bc7",
+   "id": "0e64dccd-cc37-47d8-982d-85952cb7827d",
    "metadata": {},
    "source": [
-    "\n",
     "### **Fase 5: Series Temporales y Visualización (Storytelling)**\n",
     "\n",
     "**16. Concepto: `resample()**`\n",
     "\n",
     "* **Teoría:** Como un groupby, pero especializado en índices de tiempo (frecuencias: Hora, Día, Mes).\n",
-    "* **Reto:** Establece `pickup_datetime` como índice. Resamplea los datos por 'D' (Día) y calcula el conteo total de viajes por día. ¿Qué día de la semana tiene menos tráfico históricamente?\n",
-    "\n",
+    "* **Reto:** Establece `pickup_datetime` como índice. Resamplea los datos por 'D' (Día) y calcula el conteo total de viajes por día. ¿Qué día de la semana tiene menos tráfico históricamente?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "56940668-0381-4f4c-93eb-34a0d60f0637",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.set_index('pickup_datetime')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "138adca3-0f59-4a50-826d-925b94d33926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daily_trips = df.resample('D').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "9b4448fc-48df-4291-afc8-745bfecb6c64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daily_trips_by_weekday = (\n",
+    "    daily_trips\n",
+    "    .groupby(daily_trips.index.day_name())\n",
+    "    .mean()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "f0877183-63d4-4bd6-82d6-858129cc7c27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pickup_datetime\n",
+       "Monday       7208.384615\n",
+       "Sunday       7514.076923\n",
+       "Tuesday      7798.038462\n",
+       "Wednesday    8082.153846\n",
+       "Thursday     8406.692308\n",
+       "Saturday     8494.923077\n",
+       "Friday       8597.423077\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_trips_by_weekday.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a56d5daa-1a0c-4d0e-8c4b-7ee440990bc7",
+   "metadata": {},
+   "source": [
     "**17. Concepto: Rolling Windows (`rolling()`)**\n",
     "\n",
     "* **Teoría:** Suavizar líneas temporales ruidosas.\n",
